# hit

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs
src/auth/: jwt_login.rs  mod.rs  oauth_pkce.rs  token_store.rs
src/cli/: mod.rs  output.rs
src/config/: mod.rs  schema.rs
src/http/: mod.rs  response.rs
src/mcp/: mod.rs
src/model/: mod.rs  schema_node.rs  template.rs
src/spec/: adapter.rs  mod.rs  normalize.rs  raw.rs  resolve.rs
src/tui/: mod.rs  theme.rs  widgets.rs
src/tui/form/: mod.rs
src/tui/screens/: endpoints.rs  form.rs  mod.rs  projects.rs  response.rs  tags.rs
tests/: cli_test.rs  oauth_test.rs  spec_test.rs  tui_test.rs
tests/fixtures/: fastapi_30.json  fastapi_31.json
tests/snapshots/: spec_test__template_snapshot_create_item.snap  spec_test__template_snapshot_create_user.snap
