[package]
name = "hitpoint"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Terminal API tester for FastAPI backends — TUI, scriptable CLI, and MCP server for AI agents"
repository = "https://github.com/knight433/hit"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.32"
indexmap = { version = "2.14.0", features = ["serde"] }
keyring = { version = "3", optional = true, features = ["apple-native", "sync-secret-service", "windows-native"] }
oauth2 = "5.0.0"
open = "5.3.5"
percent-encoding = "2.3.2"
ratatui = "0.30.1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "http2", "charset", "form", "query", "system-proxy"] }
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"] }
rpassword = "7.5.4"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = { version = "1.47.2", features = ["json"] }
predicates = "3.1.4"
tempfile = "3.27.0"
wiremock = "0.6.5"

[features]
keyring = ["dep:keyring"]
